Fixed list-style + overflow

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -82,7 +82,7 @@ a, a:visited {
 	ul {
 		display: block;
 		float: left;
-		margin-left: 10px;
+		padding-left: 10px;
 		max-height: 200px;
 		overflow: hidden;
 	}
